tests/parser-test-files/bad-files/parse-type.5.error
error: Malformed type predicate
  --> test:4:12
   |
 4 |  (declare f ("T" :a => T))
   |              ^^^ expected identifier
